--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: bank_app
     env: python
     buildCommand: pip install -r requirements.txt && python manage.py migrate
-    startCommand: gunicorn bank_backend.wsgi:application --bind 0.0.0.0:$PORT
+    startCommand: gunicorn bank_app.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: DB_NAME
         value: bankdb
