--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: bank_app
     env: python
-    buildCommand: pip install -r requirements.txt && python manage.py migrate
+    buildCommand: pip install -r requirements.txt && python manage.py migrate && python manage.py collectstatic
     startCommand: gunicorn bank_app.wsgi:application --bind 0.0.0.0:$PORT
     envVars:
       - key: DB_NAME
